# Apex-Global-Defense

./: .env.example  .gitignore  Makefile  README.md  SeedDataExpansion.md  buildsheet.md  chatgpt-suggestions.md  claude-suggestions.md  copilot-suggestions.md  copilot.md  docker-compose.dev.yml  docker-compose.test.yml  improvement-suggestions.md  improvements.md  openai-suggestions.md  package-lock.json
.github/workflows/: ci.yml
db/init/: 001_schema.sql  002_seed_countries.sql  003_cyber_schema.sql  004_cbrn_schema.sql  005_asym_schema.sql  006_terror_schema.sql  007_intel_schema.sql  008_civilian_schema.sql  009_stix_schema.sql  010_reporting_schema.sql  011_classification_hardening.sql  012_econ_schema.sql  013_infoops_schema.sql  014_gis_export_schema.sql  015_training_schema.sql  016_event_archival.sql  017_econ_seed_expansion.sql  018_infoops_seed_expansion.sql  019_equipment_catalog_seed.sql  020_seed_users.sql
docs/: contract-governance.md  db-dev-fallback.md  status-matrix.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
scripts/: airgap-load.sh  airgap-pack.sh  db-migrate-smoke.sh  db-seed-sanity.sql  ollama-pull.sh  smoke-test.sh
services/agd-shared/: README.md  pyproject.toml
services/agd-shared/agd_shared/: __init__.py  auth.py  errors.py
services/agd-shared/tests/: conftest.py  test_classification_tiers.py
services/sim-engine/: Cargo.toml  Dockerfile  README.md  buf.yaml  build.rs
services/sim-engine/proto/: sim_engine.proto
services/sim-engine/src/: main.rs
tiles/: README.md
(+247 files in other folders)
